--- a/ks.cfg
+++ b/ks.cfg
@@ -1,6 +1,6 @@
 # Use CD-ROM installation media
 #reboot
-repo --name="AppStream" --baseurl="http://download.rockylinux.org/pub/rocky/8.8/AppStream/x86_64/os/"
+repo --name="AppStream" --baseurl="https://dl.rockylinux.org/vault/rocky/9.1/AppStream/x86_64/os/"
 cdrom
 # Use text install
 text
