--- a/ks.cfg
+++ b/ks.cfg
@@ -1,7 +1,7 @@
 # Use CD-ROM installation media
 #reboot
 repo --name="AppStream" --baseurl="https://dl.rockylinux.org/vault/rocky/9.1/AppStream/x86_64/os/"
-cdrom
+#cdrom
 # Use text install
 text
 # Don't run the Setup Agent on first boot
