--- a/ks.cfg
+++ b/ks.cfg
@@ -1,5 +1,5 @@
 # Use CD-ROM installation media
-#reboot
+reboot
 repo --name="AppStream" --baseurl="https://dl.rockylinux.org/vault/rocky/9.1/AppStream/x86_64/os/"
 #cdrom
 # Use text install
