--- a/ks.cfg
+++ b/ks.cfg
@@ -14,7 +14,7 @@ keyboard --vckeymap=us --xlayouts='us'
 lang en_US.UTF-8
 
 # Network information
-network --bootproto=static --device=ens224 --gateway=10.182.42.126 --hostname=sc-dev-scm-generic01-tmp.eng.vmware.com --ip=10.182.42.48 --nameserver=10.78.54.4,10.78.54.5 --netmask=255.255.255.128 --onboot=on --noipv6 --activate
+network --bootproto=static --device=ens224 --gateway=<> --hostname=<> --ip=<> --nameserver=<>,<> --netmask=<> --onboot=on --noipv6 --activate
 
 # Root password
 rootpw mysecurepassword
